# ChangeLog for games-emulation/xmame
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-emulation/xmame/ChangeLog,v 1.7 2003/11/03 23:52:43 mr_bones_ Exp $

  03 Nov 2003; Michael Sterrett <mr_bones_@gentoo.org> xmame-0.76.1.ebuild:
  replace the arch if/then thing with a case statement; added support for ia64
  and amd64 for bug 32628

  31 Oct 2003; Michael Sterrett <mr_bones_@gentoo.org> xmame-0.76.1.ebuild:
  add icc USE support (bug 31769); DEPEND on sed >= 4 for -i; add more error
  checking and error messages

*xmame-0.76.1 (25 Oct 2003)

  25 Oct 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump #Bug 31992.

*xmame-0.74.1-r1 (22 Sep 2003)

  22 Sep 2003; Mike Frysinger <vapier@gentoo.org> :
  Make sure the controllers are installed #29297.

*xmame-0.74.1 (18 Sep 2003)

  18 Sep 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump #28878.

*xmame-0.72.1 (17 Aug 2003)

  17 Aug 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump #26763 + remove mips patch.

*xmame-0.71.1 (16 Aug 2003)

  16 Aug 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump #24986 + mips patch.

*xmame-0.70.1 (11 Jul 2003)

  15 Jul 2003; Mike Frysinger <vapier@gentoo.org> :
  Add glx patch #24383.

  11 Jul 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump + major rehaul of code.  Thanks to Caleb Shay <caleb@webninja.com> for
  his ideas/submissions.

*xmame-0.69.1 (05 Jun 2003)

  05 Jun 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Version bump.

*xmame-0.67.2 (28 Apr 2003)

  28 Apr 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump.

*xmame-0.62.2-r1 (28 Apr 2003)

  29 Jun 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added missing changelog entry.

*xmame-0.62.2 (13 Jan 2003)

  13 Jan 2003; Ryan Phillips <rphillips@gentoo.org> xmame-0.62.2.ebuild :
  Submitted by Caleb Shay

*xmame-0.62.1_rc2 (27 Dec 2002)
