@@ -1,6 +1,6 @@
-MD5 8c73139838a36df7fc1b6947c562f8f8 ChangeLog 4153
+MD5 fc3fce1371ec7500ff040ce4c3bb4b58 ChangeLog 4295
 MD5 044a7a61c7aa18fa3234a7497c4f3f50 xmame-0.74.1-r1.ebuild 4298
-MD5 cdf504e5e3711f4d8fe1fb3ca9359d4d xmame-0.76.1.ebuild 5418
+MD5 e8b28f6dcac07cf8b5dbd969260cf7db xmame-0.76.1.ebuild 5438
 MD5 0234d9024c471faf92bb1219242614ef metadata.xml 1566
 MD5 13dc5b32bbff98dec74c41dd0c9b33a1 files/0.76.1-glx-fix.patch 597
 MD5 13dc5b32bbff98dec74c41dd0c9b33a1 files/0.74.1-glx-fix.patch 597
